# bmt_aws_ops-project

./: .gitignore  README.rst  todo.rst
.github/workflows/: README.rst  check_cross_account_permission.yml  dummy_lambda_app.yml  dummy_lambda_app_deploy.yml  simple_cdk1.yml  simple_cdk1_deploy.yml  simple_cdk2.yml  simple_cdk2_deploy.yml  simple_glue.yml  simple_glue_deploy.yml  simple_lambda.yml  simple_lambda_deploy.yml  simple_lbd_agw_chalice.yml  simple_lbd_agw_chalice_deploy.yml  simple_lbd_container.yml  simple_lbd_container_deploy.yml  simple_release.yml  simple_sfn.yml  simple_sfn_deploy.yml
bootstrap/: README.rst  requirements.txt  run_bootstrap.py  test_check_cross_account_permission.py
cookiecutter/: README.rst  cli.py  new_project_like_simple_cdk1.py  new_project_like_simple_glue.py  new_project_like_simple_lambda.py  new_project_like_simple_lbd_agw_chalice.py  new_project_like_simple_lbd_container.py  requirements.txt
cookiecutter/more_project_like_this/: __init__.py  api.py  automation.py  cli.py  cookiecutter_wrapper.py  paths.py  virtualenv_bootstrap.py
docs/01-About-This-Project-CN/: README.rst
docs/02-How-to-Use-This-Project/: README.rst
docs/03-Template-Projects/: README.rst
projects/bmt_eco_scheduler-project/: .coveragerc  .gitignore  Makefile  README.rst  buildspec.yml  count_code.py  poetry-lock-hash.json  pyproject.toml  pyproject_ops.json  requirements-automation.txt  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  setup.py  test.py
projects/dummy_lambda_app-project/: README.rst  pyproject.toml  requirements-automation.txt
projects/simple_cdk1-project/: .coveragerc  .gitignore  Makefile  README.rst  buildspec.yml  count_code.py  pyproject.toml  setup.py  (+2 more)
projects/simple_lbd_agw_chalice-project/: .coveragerc  .gitignore  Makefile  README.rst  buildspec.yml  count_code.py  poetry-lock-hash.json  pyproject.toml  pyproject_ops.json  requirements-automation.txt  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  setup.py  test.py
projects/simple_lbd_agw_chalice-project/cdk/: app.py
projects/simple_lbd_agw_chalice-project/config/: config.json  deploy_parameters.py
projects/simple_lbd_agw_chalice-project/docs/source/: conf.py
projects/simple_lbd_agw_chalice-project/docs/source/01-Developer-Guide-CN/01-About-This-Project-CN/: index.rst
projects/simple_lbd_agw_chalice-project/docs/source/01-Developer-Guide-CN/02-How-To-Use-Chalice-CN/: index.rst
projects/simple_lbd_agw_chalice-project/docs/source/01-Developer-Guide-CN/03-Load-Test-CN/: index.rst
projects/simple_lbd_agw_chalice-project/docs/source/01-Developer-Guide-CN/04-Software-Development-Life-Cycle-CN/: index.rst
projects/simple_lbd_agw_chalice-project/docs/source/01-Developer-Guide-CN/07-Centralized-Multi-Env-Config-Management-CN/: index.rst
projects/simple_lbd_agw_chalice-project/docs/source/01-Developer-Guide-CN/08-Manage-Blue-Green-or-Canary-Deployment-and-Rollback-CN/: index.rst
projects/simple_lbd_agw_chalice-project/docs/source/01-Developer-Guide-CN/09-CDK-Development-Best-Practice-CN/: index.rst
projects/simple_lbd_agw_chalice-project/docs/source/simple_lbd_agw_chalice/: __init__.rst  _api.rst  api_gateway.rst  boto_ses.rst  constants.rst  env.rst  git.rst  logger.rst  ops.rst  paths.rst  pyproject.rst  runtime.rst
projects/simple_lbd_agw_chalice-project/docs/source/simple_lbd_agw_chalice/config/: __init__.rst  api.rst  backup.rst  load.rst
projects/simple_lbd_agw_chalice-project/docs/source/simple_lbd_agw_chalice/config/define/: __init__.rst  api.rst  app.rst  lbd_deploy.rst  lbd_func.rst  main.rst  name.rst
projects/simple_lbd_agw_chalice-project/docs/source/simple_lbd_agw_chalice/iac/: __init__.rst  exports.rst
projects/simple_lbd_agw_chalice-project/docs/source/simple_lbd_agw_chalice/iac/define/: __init__.rst  dynamodb.rst  iam.rst  main.rst
projects/simple_lbd_agw_chalice-project/docs/source/simple_lbd_agw_chalice/lbd/: __init__.rst  add_one.rst  hello.rst
projects/simple_lbd_agw_chalice-project/lambda_app/: app.py  requirements.txt  update_chalice_config.py
projects/simple_lbd_agw_chalice-project/lambda_app/.chalice/: .gitignore
projects/simple_lbd_agw_chalice-project/simple_lbd_agw_chalice/: api_gateway.py  boto_ses.py  constants.py  env.py  ops.py  paths.py
projects/simple_lbd_agw_chalice-project/simple_lbd_agw_chalice/config/define/: app.py  lbd_deploy.py  lbd_func.py  main.py  name.py
projects/simple_lbd_agw_chalice-project/simple_lbd_agw_chalice/iac/: exports.py
projects/simple_lbd_agw_chalice-project/simple_lbd_agw_chalice/iac/define/: dynamodb.py  iam.py  main.py
projects/simple_lbd_agw_chalice-project/simple_lbd_agw_chalice/lbd/: add_one.py
projects/simple_lbd_agw_chalice-project/simple_lbd_agw_chalice/tests/: mock_aws.py
projects/simple_lbd_agw_chalice-project/tests/: test_boto_ses.py  test_env.py  test_git.py  test_import.py  test_runtime.py
projects/simple_lbd_agw_chalice-project/tests/config/: test_config_load.py
projects/simple_lbd_agw_chalice-project/tests/iac/: test_iac_define.py
projects/simple_lbd_agw_chalice-project/tests/lbd/: test_lbd_add_one.py  test_lbd_hello.py
projects/simple_lbd_agw_chalice-project/tests_int/api/: test_api_gateway.py
projects/simple_lbd_agw_chalice-project/tests_int/iac/: test_iac_exports.py
projects/simple_lbd_agw_chalice-project/tests_int/lbd/: test_lbd_add_one.py  test_lbd_hello.py
projects/simple_lbd_agw_chalice-project/tests_load/: locustfile_fast.py  locustfile_slow.py
scripts/: sync_aws_ops_alpha.py
(+529 files in other folders)
